# DeltaFabric

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md
delta_fabric/: Cargo.toml
delta_fabric/src/: lib.rs
delta_fabric/src/burn/: flatten.rs  mod.rs  test.rs  unflatten.rs
delta_fabric/src/core/: mod.rs  test.rs
delta_fabric/src/core/config/: mod.rs  test.rs
delta_fabric/src/core/networking/: mod.rs  test.rs
delta_fabric/src/core/packet/: mod.rs  test.rs
delta_fabric/src/core/sync/: apply.rs  generate.rs  test.rs
examples/mnist/: Cargo.toml  README.md
examples/mnist/mnist_distributed_2/: Cargo.toml
examples/mnist/mnist_distributed_2/src/: main.rs
examples/mnist/mnist_distributed_3/: Cargo.toml
examples/mnist/mnist_distributed_3/src/: main.rs
examples/mnist/mnist_shared/src/: lib.rs
examples/mnist/mnist_single/: Cargo.toml
examples/mnist/mnist_single/src/: main.rs
examples/mnist_burn/: README.md
examples/mnist_burn/mnist_distributed_2/: Cargo.toml
examples/mnist_burn/mnist_distributed_2/src/: main.rs
examples/mnist_burn/mnist_distributed_3/: Cargo.toml
examples/mnist_burn/mnist_distributed_3/src/: main.rs
examples/mnist_burn/mnist_shared/: Cargo.toml
examples/mnist_burn/mnist_shared/src/: lib.rs
examples/mnist_burn/mnist_single/: Cargo.toml
examples/mnist_burn/mnist_single/src/: main.rs
examples/mnist_pytorch/: README.md  mnist_distributed_2.py  mnist_distributed_3.py  mnist_single.py  model.py
src/: lib.rs
src/burn/: mod.rs  test.rs  traits.rs
src/core/: mod.rs  test.rs
src/core/config/: mod.rs  test.rs
src/core/networking/: mod.rs  test.rs
src/core/packet/: mod.rs  test.rs
src/core/sync/: apply.rs  generate.rs  mod.rs  test.rs
src/pytorch/: mod.rs
