[package]
name = "mnist_distributed_2"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mnist_distributed_2"
path = "src/main.rs"

[dependencies]
delta_fabric = { path = "../../../" }
mnist_shared = { path = "../mnist_shared" }
burn = { version = "0.20", features = ["train", "autodiff", "dataset", "vision"] }
burn-ndarray = "0.20"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
